# iut-rt-sae503-iut-stmalo-sae503

./: Makefile  SECURITY.md  build_citations_haddock.sh  citations_haddock.Dockerfile  docker-compose.yaml  test_app.sh
citation_microservice/: app.py
citations_haddock/: citations_haddock.py  pyproject.toml  quotes.py  requirements.txt  search.py  test_citations_haddock.py  users.py
citations_haddock/quotes/: Dockerfile  test.py
citations_haddock/search/: Dockerfile  search.py  test.py
citations_haddock/users/: Dockerfile  test.py  users.py
docs/: LOT1-architecture-technique.md  LOT2-installation-technique.md  LOT3-refactorisation.md  LOT4-deploiement.md  README.md
haddock_kc_md/: values.yaml
haddock_kc_md/templates/: deployment.yaml  pvc.yaml
k3s/base/: ingress.yml  namespace.yml  quotes-deployment.yml  redis.yml  search-deployment.yml  secret.yml  user-deployment.yml
kube/: deployment.yaml  redis.yaml  service.yaml  traefik.yaml
recherche_microservice/: app.py
src/quotes/: app_quotes.py
src/search/: app_search.py
src/users/: app_users.py
tests/: test_functional.py
user_microservice/: app.py
